RESOLVED FIXED249857
[IFC][hanging punctuation] Non-whitespace hanging content contributes to scrollable overflow
https://bugs.webkit.org/show_bug.cgi?id=249857
Summary [IFC][hanging punctuation] Non-whitespace hanging content contributes to scro...
alan
Reported 2022-12-23 21:42:41 PST
ssia
Attachments
Patch (11.24 KB, patch)
2022-12-23 21:48 PST, alan
no flags
alan
Comment 1 2022-12-23 21:48:49 PST
EWS
Comment 2 2022-12-24 09:28:28 PST
Committed 258321@main (ffe153e2fe6f): <https://commits.webkit.org/258321@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464190 [details].
Radar WebKit Bug Importer
Comment 3 2022-12-24 09:29:17 PST
Note You need to log in before you can comment on or make changes to this bug.